# ghosts-of-mekong

./: CMakeLists.txt  README.md
assets/inspiration/: 2665.jpg.jxl  apocalypse-now.avif
include/: Animation.cpp  Animation.h  CollisionManager.cpp  CollisionManager.h  DeathType.h  Environment.cpp  Environment.h  GameObject.cpp  GameObject.h  Platform.cpp  Platform.h  Player.h  Weapon.h
levels/: Level1.h  MainMenu.cpp  MainMenu.h
src/: Player.cpp  Weapon.cpp  main.cpp
src/enemies/: Enemy.cpp  Enemy.h  EnemyClassEnum.h  EnemyFactionEnum.h  EnemyTypeEnum.h
src/enemy/: Enemy.cpp  Enemy.h  EnemyClassEnum.h  EnemyTypeEnum.h
src/player/: Player.cpp  Player.h  PlayerEnums.h
src/powerup/: PowerUpTypeEnums.h
src/powerups/: PowerUpTypeEnums.h
src/status_effect/: StatusEffect.cpp  StatusEffect.h
src/status_effects/: StatusEffect.cpp  StatusEffect.h
src/weapon/: LaserWeapon.cpp  LaserWeapon.h  MeleeWeapon.cpp  MeleeWeapon.h  Projectile.cpp  Projectile.h  ShotgunWeapon.cpp  ShotgunWeapon.h  SniperWeapon.cpp  SniperWeapon.h  Weapon.cpp  Weapon.h  WeaponEnums.h
src/weapons/: BulletWeapon.h  LaserWeapon.cpp  LaserWeapon.h  MeleeWeapon.cpp  MeleeWeapon.h  Projectile.cpp  Projectile.h  ShotgunWeapon.cpp  ShotgunWeapon.h  SniperWeapon.cpp  SniperWeapon.h  Weapon.cpp  Weapon.h  WeaponEnums.h
tests/: TestLevel.h  TestPlayer.cpp  test_main.cpp
