add_executable(new_target src/weapons/BulletWeapon.h
        src/weapons/WeaponEnums.h
        include/GameObject.cpp
        include/GameObject.h
        src/player/Player.h
        src/weapons/Weapon.h
        src/player/PlayerEnums.h
        src/status_effects/StatusEffect.cpp
        src/status_effects/StatusEffect.h
        src/weapons/Weapon.cpp
        src/player/Player.cpp
        include/DeathType.h
        src/powerups/PowerUpTypeEnums.h
        src/enemies/Enemy.cpp
        src/enemies/Enemy.h
        src/enemies/EnemyTypeEnum.h
        src/enemies/EnemyClassEnum.h
        src/enemies/EnemyFactionEnum.h
        levels/MainMenu.cpp
        levels/MainMenu.h
        tests/TestPlayer.cpp)
